--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Domer</title>
+    <title>Prison Project</title>
 </head>
+
 <body>
     <script src="/js/Domer.js"></script>
     <!-- Import all other javascript files below Domer -->
+    <script src="/js/Cell.js"></script>
+    <script src="/js/Block.js"></script>
     <script src="/js/App.js"></script>
 </body>
+
 </html>
