--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <script src="/js/Domer.js"></script>
     <!-- Import all other javascript files below Domer -->
+    <script src="/js/Person.js"></script>
+    <script src="/js/Inmate.js"></script>
     <script src="/js/Cell.js"></script>
     <script src="/js/Block.js"></script>
     <script src="/js/App.js"></script>
