--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Import all other javascript files below Domer -->
     <script src="/js/Person.js"></script>
     <script src="/js/Inmate.js"></script>
+    <script src="/js/Worker.js"></script>
     <script src="/js/Cell.js"></script>
     <script src="/js/Block.js"></script>
     <script src="/js/App.js"></script>
